--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "bucketLIST v1",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "author": "Colt Steele",
-  "license": "ISC",
+  "author": "teamjems",
   "dependencies": {
     "body-parser": "^1.18.3",
     "cloudinary": "^1.13.2",
